Pin to Plone 3.3.x compliant z3c.form version
Newer versions need the IDecimal interface from zope.schema, which is
not provided in the zope3 package which is compatible with Plone.3.3x.
This will run the tests again.

--- a/test-plone-3.3.x.cfg
+++ b/test-plone-3.3.x.cfg
@@ -3,3 +3,6 @@ extends =
     http://svn.plone.org/svn/collective/buildout/plonetest/plone-3.3.x.cfg
 
 package-name = plone.formwidget.captcha
+
+[versions]
+z3c.form = 1.9.0
