Update development configuration
Use standard configuration from buildout.plonetest

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,2 +1,32 @@
 [buildout]
-extends = test-plone-4.0.x.cfg
+extends =
+    https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
+
+package-name = plone.formwidget.captcha
+test-eggs = zope.app.testing
+
+parts +=
+    code-analysis
+    i18ndude
+    omelette
+    rebuild_i18n-sh
+
+[code-analysis]
+directory = ${buildout:directory}/plone/formwidget/captcha
+pre-commit-hook = False
+flake8-ignore = E501
+
+[i18ndude]
+recipe = zc.recipe.egg
+eggs = i18ndude
+
+[omelette]
+recipe = collective.recipe.omelette
+eggs = ${test:eggs}
+
+[rebuild_i18n-sh]
+recipe = collective.recipe.template
+url = https://raw.github.com/collective/buildout.plonetest/master/templates/rebuild_i18n.sh.in
+output = ${buildout:directory}/bin/rebuild_i18n.sh
+mode = 755
